Correction position image 'Note Enchantée' version mobile et suppression des commentaires superflux

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -548,31 +548,25 @@ nav {
 .main-restaurants {
   display: flex;
   flex-direction: column;
-  /*position: relative;*/
   animation: apparitionProgressive 2s;
 }
 
-.image {
-  height: 300px;
-  /*position: relative;*/
-  overflow: hidden;
-}
 .image img {
   width: 100%;
   object-fit: cover;
 }
 .image img.resto-la-note-enchantee {
-  object-position: 0 -110px;
+  height: 100%;
+}
+.image.image-note-enchantee {
+  height: 400px;
 }
 
 .menus {
-  /*position: relative;*/
-  /*width:100%;*/
   margin-top: -50px;
   background-color: #F7F7F7;
   border-radius: 50px 50px 0 0;
   padding: 30px 20px;
-  box-sizing: border-box;
 }
 .menus h1 {
   font-family: "Shrikhand", cursive;
@@ -698,11 +692,6 @@ nav {
 }
 
 @media screen and (min-width: 992px) { /* ******************** Version Desktop **************** */
-  /*.main-restaurants{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }*/
   .image {
     height: 400px;
   }
@@ -713,8 +702,6 @@ nav {
     object-position: 0 -450px;
   }
   .menus {
-    top: 40%;
-    width: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -726,36 +713,17 @@ nav {
     display: flex;
     justify-content: space-between;
   }
-  /*.footer-restaurants{
-    position: absolute;
-    top: 940px;
-  }
-  .footer-laNoteEnchantee{
-    position: absolute;
-    top: 1060px;
-  }*/
 }
 @media screen and (min-width: 768px) and (max-width: 991px) { /* ********** Version Tablette *************** */
   .image {
     height: 400px;
   }
   .image img {
-    object-position: 0 -100px;
+    object-position: 0 0px;
   }
   .image img.resto-la-note-enchantee {
     object-position: 0 -450px;
   }
-  /*.image img{
-    object-position: 0 -200px;
-  }*/
-  /*.footer-restaurants{
-     position: absolute;
-     top: 1520px;
-   }
-   .footer-laNoteEnchantee{
-     position: absolute;
-     top: 60%;
-   }*/
 }
 
 /*# sourceMappingURL=style.css.map */
